
  * fixef: return value is now class c("fixef", "numeric") ("numeric" added).
  * summary.fixef: return value is now of class c("summary.fixef", "matrix") ("matrix" added);
                   type and df.residual added as attributes.
    Both class additions allow easier further processing of the return values. 
  
Changes since version 1.5-32

  * pcdtest: fixed p-value for cross-sectional dependence scaled LM test (pcdtest(..., test = "sclm")).

Changes since version 1.5-33

  * (internal) pdiff gained 'effect' argument and thus is more general.
  * plm: trying to estimate first-difference (FD) models with effect="time" or "twoways" is now prevented 
         with meaningful error messages; footnote 3 in vignette slightly adapted to reflect this.
  
Changes since version 1.5-34

  * Ftest: support for vcovs from package clubSandwich to allow df2 adjustment in robust F test
           (new func trans_clubSandwich_vcov added for this purpose).
  * (internal) model.matrix.pFormula: case "pooling" added to twoways/unbalanced condition;
                                      for unknown cases, give meaningful error.
  * alias.plm, alias.pFormula added: complements the generic stats::alias to detect linear 
                                     dependence (much like detect_lin_dep).
  * detect_lin_dep.plm added.
  * plm objects gained element 'aliased' (a named logical) to indicate any aliased coefficients that are 
    silently dropped during estimation by plm (cf. summary.lm objects).
  * fix: vcovXX.plm / vcovG framework now handle plm models with aliased coefficients (linear dependent columns
    in model matrix).
  * phtest: better support for between models in phtest;
            for method="aux", argument effect is now extracted from dots.

Changes since version 1.5-35

  * pbltest.plm: plm interface now respects the 'alternative' argument.
  * summary.plm: summary.plm objects gained new component 'df' to mimic summary.lm objects more closely.

  